@@ -1,6 +1,7 @@
 c - crash     b - bug fix    e - enhancement    f - new feature
 
 2.3.3
+  b - changed so run_pelog opens correct stdout/stderr when join is used
 
 2.3.2
   e - added --disable-posixmemlock to force mom not to use POSIX MEMLOCK.
